<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Polfg.Polfg</groupId>
    <artifactId>brainrot-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>Brainrot Plugins Parent</name>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Bump these here to match your server; CI will report mismatches -->
        <paper.version>1.21.4-R0.1-SNAPSHOT</paper.version>
        <vault.version>1.7</vault.version>
        <placeholderapi.version>2.11.6</placeholderapi.version>
        <worldedit.version>7.3.6</worldedit.version>
        <worldguard.version>7.0.12</worldguard.version>
        <fancyholograms.version>2.9.0</fancyholograms.version>
    </properties>

    <modules>
        <module>brainrot-stubs</module>
        <module>brainrot-admin</module>
        <module>brainrot-bases</module>
        <module>brainrot-auction</module>
        <module>brainrot-codes</module>
        <module>brainrot-events</module>
        <module>brainrot-extras</module>
        <module>brainrot-placeholdermoney</module>
        <module>brainrot-shop</module>
        <module>brainrot-spawner</module>
        <module>spawnworld</module>
    </modules>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>enginehub</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>fancyinnovations-releases</id>
            <url>https://repo.fancyinnovations.com/releases</url>
        </repository>
    </repositories>

    <!-- Deps shared by ALL modules. External APIs are provided (supplied at runtime). -->
    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vault.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                    <failOnWarning>false</failOnWarning>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
